# clvm

./: .gitignore  Cargo.toml  HISTORY.org  README.md  go.py  mypy.ini  pip-req.txt  pyproject.toml  requirements-dev.txt  setup.py
clvm/: BaseSExp.py  CLVMObject.py  CoreSExp.py  Eval.py  EvalError.py  PyCLVMObject.py  RExp.py  ReduceError.py  SExp.py  __init__.py  as_python.py  casts.py  chainable_multi_op_fn.py  chia_dialect.py  chia_dialect_constants.py  core.py  core_ops.py  corevm_0_0_1.py  costs.py  dedup_clvm.py  dialect.py  handle_unknown_op.py  intern_clvm.py  make_eval.py  make_eval_rs.py  more_operators.py  more_ops.py  object_cache.py  op_utils.py  operators.py  read_cache_lookup.py  run_program.py  runtime_001.py  ser_br.py  serialize.py  subclass_sexp.py  tree_path.py  tree_path_trie.py  types.py  version.py
compiler/: Node.py  cmds.py  compile.py  expand.py  prog.py  reader.py  writer.py
docs/: CHIASCRIPT-BY-EXAMPLE.md.html  clvm.org
opacity/: RExp.py  SExp.py  Var.py  binutils.py  casts.py  check_solution.py  cmds.py  compile.py  core.py  core_operators.py  debug.py  int_keyword.py  keywords.py  operators.py  reader.py  reduce.py  rewrite.py  rewrite_ops.py  schema.py  serialize.py  standard_rewrite.py  writer.py
schemas/: compiler_001.py  corevm_0_0_1.py  more_operators.py  runtime_001.py  v0_0_1.py  v0_0_2.py
sexp/: reader.py  writer.py
src/: api.rs  core_ops.rs  eval.rs  f_table.rs  lib.rs  more_ops.rs  node.rs  number.rs  op_lookup_hash.rs  operators.rs  pysexp.rs  run_program.rs  serialize.rs  tests.rs  types.rs
tests/: as_python_test.py  (+23 more)
(+1329 files in other folders)
